--- a/Data Types and Variables/Problem 7. Greeting/Problem 7. Greeting.csproj
+++ b/Data Types and Variables/Problem 7. Greeting/Problem 7. Greeting.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{917C7519-5F2E-4293-AA34-C5BB712F806D}</ProjectGuid>
+    <ProjectGuid>{C4E824A1-74FA-4DBE-A1C2-6F924579C0DC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Problem_4.Elevator</RootNamespace>
-    <AssemblyName>Problem 4.Elevator</AssemblyName>
+    <RootNamespace>Problem_7.Greeting</RootNamespace>
+    <AssemblyName>Problem_7.Greeting</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
