--- a/Data Types and Variables/Problem 8. Refactor Volume of Pyramid/Problem 8. Refactor Volume of Pyramid.csproj
+++ b/Data Types and Variables/Problem 8. Refactor Volume of Pyramid/Problem 8. Refactor Volume of Pyramid.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{917C7519-5F2E-4293-AA34-C5BB712F806D}</ProjectGuid>
+    <ProjectGuid>{EFAF0B65-EE18-4608-9AC0-604D5CD50384}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Problem_4.Elevator</RootNamespace>
-    <AssemblyName>Problem 4.Elevator</AssemblyName>
+    <RootNamespace>Problem_8.Refactor_Volume_of_Pyramid</RootNamespace>
+    <AssemblyName>Problem_8.Refactor_Volume_of_Pyramid</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
