--- a/Data Types and Variables/Problem 9. Refactor Special Numbers/Problem 9. Refactor Special Numbers.csproj
+++ b/Data Types and Variables/Problem 9. Refactor Special Numbers/Problem 9. Refactor Special Numbers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{917C7519-5F2E-4293-AA34-C5BB712F806D}</ProjectGuid>
+    <ProjectGuid>{C64856FA-0056-4059-ABD4-CC2844AAB773}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Problem_4.Elevator</RootNamespace>
-    <AssemblyName>Problem 4.Elevator</AssemblyName>
+    <RootNamespace>Problem_9.Refactor_Special_Numbers</RootNamespace>
+    <AssemblyName>Problem_9.Refactor_Special_Numbers</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
